# saltybox

./: .gitignore  .golangci.yml  .goreleaser.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_IMPROVEMENT_SUGGESTIONS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.adoc  README.md  REWRITE.md  SPEC.md  cliff.toml  coverage.txt  dist-workspace.toml  dprint.json  glide.yaml  go.mod  go.sum  saltybox.go  saltybox_test.go
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-commit-pr-title.yml  doctoc.yml  go.yml  golangci-lint.yml  release-plan-tests.yml  release.yml  rust.yml
armorcrypt/: armorcrypt.go  armorcrypt_test.go
commands/: commands.go  commands_test.go  genvectors.go
golden/: main.go  main_test.go
lore/: 2026-07-01-saltybox2.md  AGENTS.md
preader/: preader.go  preader_test.go
rust/: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
rust/src/: armor.rs  file_ops.rs  lib.rs  passphrase.rs  secretcrypt.rs  varmor.rs
rust/src/armor/: mod.rs
rust/src/cli/: mod.rs
rust/src/crypto/: mod.rs
rust/src/passphrase/: mod.rs
rust/src/secretcrypt/: mod.rs
rust/tests/: cli_integration.rs  golden_vectors.rs
saltybox-rs/: Cargo.toml
saltybox-rs/src/: commands.rs  lib.rs  main.rs  preader.rs  secretcrypt.rs  varmor.rs
secretcrypt/: secretcrypt.go  secretcrypt_test.go
src/: error.rs  file_ops.rs  format.rs  format_v2.rs  lib.rs  passphrase.rs  secretcrypt.rs  varmor.rs
testdata/: README  generate-golden-vectors-v2.py  golden-vectors-v2.json  golden-vectors.json  hello.txt.salty
tests/: cli_integration.rs  cmdline.sh  golden.sh  golden_vectors.rs  golden_vectors_v2.rs
varmor/: varmor.go  varmor_test.go
