[package]
name = "saltybox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"  # Rust 2024 edition requires 1.85+
authors = ["saltybox contributors"]
description = "Passphrase-based file encryption tool using NaCl secretbox"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scode/saltybox"
default-run = "saltybox"

[[bin]]
name = "saltybox"
path = "src/bin/saltybox.rs"

[dependencies]
thiserror = "1.0"
scrypt = "0.11"
crypto_secretbox = "0.1"
rand = "0.8"
base64 = "0.22"
rpassword = "7.3"
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }
zeroize = "1.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compile scrypt with optimizations even in dev/test builds. scrypt
# is intentionally slow, and for all practical purposes we assume
# that scrypt is not buggy and not under testing.
[profile.dev.package.scrypt]
opt-level = 3

[profile.test.package.scrypt]
opt-level = 3
