[package]
name = "saltybox"
version = "3.2.0"
authors = ["saltybox contributors"]
default-run = "saltybox"
edition = "2024"
homepage = "https://github.com/scode/saltybox"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scode/saltybox"
rust-version = "1.85" # Rust 2024 edition requires 1.85+
description = "Passphrase-based file encryption tool using NaCl secretbox"

[[bin]]
name = "saltybox"
path = "src/bin/saltybox.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crypto_secretbox = "0.1"
rand = "0.10"
rpassword = "7.4"
scrypt = "0.11"
tempfile = "3.25"
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compile scrypt with optimizations even in dev/test builds. scrypt
# is intentionally slow, and for all practical purposes we assume
# that scrypt is not buggy and not under testing.
[profile.dev.package.scrypt]
opt-level = 3

[profile.test.package.scrypt]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
