[package]
name = "saltybox"
version = "3.3.1"
authors = ["saltybox contributors"]
default-run = "saltybox"
edition = "2024"
homepage = "https://github.com/scode/saltybox"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scode/saltybox"
rust-version = "1.85" # Rust 2024 edition requires 1.85+
description = "Passphrase-based file encryption tool"

[[bin]]
name = "saltybox"
path = "src/bin/saltybox.rs"

[dependencies]
# std: saltybox errors carry their underlying cause as a source, so the CLI
# can print a "caused by" chain. That requires the cause to implement
# std::error::Error, which argon2::Error only does with the std feature
# enabled; without it, argon2 failures would have to be flattened into
# plain text messages.
# zeroize: makes argon2 wipe the internal buffers that are equivalent to the
# derived key (the passphrase-derived initial hash and the final block hash)
# instead of leaving them behind in freed memory.
argon2 = { version = "0.5", features = ["std", "zeroize"] }
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
crypto_secretbox = "0.1"
rand = "0.10"
rpassword = "7.4"
scrypt = "0.11"
tempfile = "3.25"
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Deny rustdoc's lints (e.g. public docs intra-doc-linking a private item) so
# plain `cargo doc` fails on them everywhere — locally and in CI — without
# anyone having to remember an extra flag or environment variable.
[lints.rustdoc]
all = "deny"

# Compile the key-derivation crates with optimizations even in dev/test
# builds. They are intentionally slow, and for all practical purposes we
# assume they are not buggy and not under testing.
[profile.dev.package.scrypt]
opt-level = 3

[profile.test.package.scrypt]
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3

[profile.test.package.argon2]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
