[package]
name = "saltybox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"  # Rust 2024 edition requires 1.85+
authors = ["saltybox contributors"]
description = "Passphrase-based file encryption tool using NaCl secretbox"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/scode/saltybox"
default-run = "saltybox"

[[bin]]
name = "saltybox"
path = "src/bin/saltybox.rs"

[[bin]]
name = "golden"
path = "src/bin/golden.rs"

[dependencies]
anyhow = "1.0"
scrypt = "0.11"
crypto_secretbox = "0.1"
rand = "0.8"

[dev-dependencies]
